[gd_scene load_steps=8 format=3 uid="uid://n2u8wauowhhq"]

[ext_resource type="Script" path="res://scripts/generator_ui.gd" id="1_k0rom"]
[ext_resource type="PackedScene" uid="uid://c70vlkokdqkb5" path="res://scenes/generator_panel.tscn" id="2_3s26r"]
[ext_resource type="Script" path="res://scripts/seed_label.gd" id="3_l8y56"]

[sub_resource type="Animation" id="Animation_axm6f"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Fader:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Fader:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SeedLabel:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_ptrgw"]
resource_name = "ui_black_fade"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Fader:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Fader:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.9),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_pdkrd"]
resource_name = "ui_seed_copy"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SeedLabel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0, 0.94902, 0.203922, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xf2xk"]
_data = {
"RESET": SubResource("Animation_axm6f"),
"ui_black_fade": SubResource("Animation_ptrgw"),
"ui_seed_copy": SubResource("Animation_pdkrd")
}

[node name="IslandGeneratorUI" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_k0rom")

[node name="Fader" type="ColorRect" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="InfoText" type="RichTextLabel" parent="."]
layout_mode = 0
anchor_bottom = 1.0
offset_right = 311.0
grow_vertical = 2
mouse_filter = 1

[node name="GeneratorInputHolder" type="CenterContainer" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="GeneratorInputPanel" parent="GeneratorInputHolder" instance=ExtResource("2_3s26r")]
layout_mode = 2

[node name="SeedLabel" type="Label" parent="."]
layout_mode = 0
anchor_left = 1.0
anchor_right = 1.0
offset_left = -67.0
offset_bottom = 26.0
grow_horizontal = 0
tooltip_text = "UI_CLICK_TO_COPY"
mouse_filter = 0
horizontal_alignment = 2
script = ExtResource("3_l8y56")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "RESET"
libraries = {
"": SubResource("AnimationLibrary_xf2xk")
}

[connection signal="generate" from="GeneratorInputHolder/GeneratorInputPanel" to="." method="_on_generate"]
[connection signal="seed_copied" from="SeedLabel" to="." method="_on_seed_copied"]
